# my_model

./: .flake8  .gitignore  .pylintrc  README.md  dev_requirements.txt  pyproject.toml  pytest.ini
.devcontainer/: .bashrc.daryl  .promptname  .vimrc  Dockerfile  devcontainer.json  setup-dev.sh
.github/workflows/: _check-version-tag.yml  _check_version_tag.yml  _deploy.yml  _integration.yml  _publish_docs.yml  _set-version-tag.yml  branch-dev.yml  deploy.yml  development.yml  integration-testing.yml  integration.yml  push-to-all-other.yml  push-to-dev.yml  push-to-main.yml  run-unit-tests.yml  unit-testing.yml
docs/: Branching and release strategy.md  Versioning.md
docs/source/: conf.py  global.rst  index.rst  installation.rst  models.rst  user_scoped.rst
docs/source/api_documentation/: global_models.rst  my_model.rst  user_scoped_models.rst
docs/source/developing/: development.rst  setting_up.rst
src/: requirements-build.txt  requirements-dev.txt  requirements.txt
src/my_model/: __init__.py  _model.py  _token_object.py  api_client.py  api_scope.py  api_token.py  global_models.py  model.py  my_model.py  tag.py  token_model.py  user.py  user_scoped_model.py  user_scoped_models.py  usersession.py  web_ui_setting.py
tests/: test_api_client.py  test_api_scope.py  test_api_token.py  test_base_model.py  test_tag.py  test_users.py  test_usersession.py
tools/: check-dependency-versions.py
