[build-system]
requires = ['setuptools>=61.1.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "my_model"
version = "1.2.0-dev"
description = "The data model for the My project"
readme = "README.md"
authors = [{ name = "Daryl Stark", email = "daryl@dstark.nl" }]
#license = { file = "LICSENSE" } # License is not figured out yet
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["my", "model", "darylstark"]
dependencies = [
    "sqlmodel >= 0.0.0",
    "passlib >= 1.7.0",
    "argon2-cffi >= 21.3.0",
    "pyotp >= 2.8.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    'pytest >= 7.3.0',
    'pycodestyle == 2.10.0',
    'autopep8 == 2.0.0',
    'pylint == 2.17.0',
    'mypy == 1.3.0',
    'flake8 == 6.0.0',
    'pydocstyle == 6.3.0',
]

[project.urls]
Homepage = 'https://github.com/DarylStark/my_model'

[tool.bumpver]
current_version = "1.2.0-dev"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Version {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/my_model/__init__.py" = ["{version}"]

[tool.pytest.ini_options]
pythonpath = ['./src/', './tests/']
