[tool.poetry]
name = "ds-my-model"
version = "1.3.3"
description = "The data model for the My project"
authors = ["Daryl Stark <daryl@dstark.nl>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "my_model", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.14"
pydantic = "^2.5.2"
passlib = "^1.7.4"
argon2-cffi = "^21.3.0"
pyotp = "^2.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pycodestyle = "^2.11.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pydocstyle = "^6.3.0"
darglint2 = "^1.8.2"
autopep8 = "^2.0.2"
bumpver = "^2023.1129"
toml = "^0.10.2"
coverage = "^7.3.4"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.2"
sphinxcontrib-mermaid = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "1.3.3"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Version {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/my_model/__init__.py" = ["{version}"]

[tool.pytest.ini_options]
addopts = ['--cov=my_model', '--cov-report=html', '--cov-report=lcov']
